impl GET /user/games v2
