# server-azure/src/impl/data/catan-data-connector.ts
@@ -2,6 +2,7 @@ import type { Token, User } from '../../model/user';
 import type { Board } from '../../model/game/board';
 import { CosmosDBCachingCDC } from './cosmosdb-caching-cdc';
 import type { State } from '../../model/game/state';
+import type { UserGame } from '../../model/game/user-game';
 
 export interface CatanDataConnector {
   getUser(id: string, skipCache?: boolean): Promise<User>;
@@ -10,7 +11,10 @@ export interface CatanDataConnector {
   updateUser(user: User): Promise<void>;
   deleteUser(id: string): Promise<void>;
 
-  // List<String> getGames(String userId, Boolean ongoing) throws CatanException;
+  getUserGamesByUser(userId: string, ongoing: boolean | undefined): Promise<UserGame[]>;
+  createUserGames(userGames: UserGame[]): Promise<void>;
+  updateUserGames(...userGames: UserGame[]): Promise<void>;
+  deleteUserGame(id: string): Promise<void>;
 
   getToken(id: string): Promise<Token>;
   createToken(token: Token): Promise<void>;
@@ -18,6 +22,7 @@ export interface CatanDataConnector {
 
   getBoard(id: string): Promise<Board>;
   createBoard(board: Board): Promise<void>;
+  updateBoard(board: Board): Promise<void>;
   deleteBoard(id: string): Promise<void>;
 
   getState(id: string, etag: string | undefined): Promise<State | undefined>;
